2007-05-16  Djihed Afifi  <djihed@gmail.com>

	* Makefile.am : don't use distuninstallcheck_listfiles.
	* minbar.glade : interface revamp. Introducing calendar,
		new UI options, seperate athans for subh and normal.
		etc.
	* src/Makefile.am : use noinst_HEADERS
		move /apps/minbar to prefs.h
	* main.h : new function prototypes.
	* main.c : add calendar navigation.
		Add ability to have multiple athans
		icons for dialogs.

2006-05-14  Abderrahim Kitouni  <a.kitouni@gmail.com>

	* configure.ac, src/main.c, src/prefs.h : add the possibility to use a
	keyfile instead of gconf for storing preferences. Minbar doesn't rely on
	gnome anymore.
	
	* configure.ac, acinclude.m4 : added the possibility to use relative
	filenames for its resources (mainly to be used on Windows). added a
	couple of GPL'd macros to compute the relative paths.
	
	* src/main.c : rewrote part of update_date_label so that it uses glib.
	
2007-05-06  Djihed Afifi  <djihed@gmail.com>

	* README : minor corrections.
	* TODO : Plans for next release.
	* configure.ac : no need for glade.in.
		add variable to configure minbar.schemas.in.in
	* data/Makefile.am : get schemas.in.
		shutdown gconftool after install.
	* pixmaps/Makefile.am : specify uninstall hook
	* src/main.c : Close now only hides.
		handle preference to close instead (gconf)
		Athan location preference for subh and normal
		Load icon from icon cache, not direct image name, to allowtheming.
	* src/prefs.h : new preferences for athan locations and close option.

2007-03-21  Djihed Afifi  <djihed@gmail.com>

	* pixmaps/Makefile.am : proper icon size.

	* Makefile.am : Fix icon rule.

	* minbar.desktop.in : switch to minbar.desktop.in to get translated
	menu entries.

	* data/minbar.schemas.in: Translatable preferences.

	* src/main.c : Specify next prayer name in tooltip.

2007-02-17  Djihed Afifi  <djihed@gmail.com>

	* doc/minbar.1 : minor corrections.

	* src/main.c : added ability to start minimised
