@@ -1,4 +1,4 @@
-.TH minbar 1 2006-12-24 minbar "minbar"
+.TH minbar 1 2007-05-17 minbar "minbar"
 .SH NAME
 Minbar - Gnome Prayer Times
 .SH SYNOPSIS
@@ -8,6 +8,14 @@ Minbar - Gnome Prayer Times
 is a Gnome Islamic prayer times application. At first start, you have to configure it with your location, time zone and madhab details. 
 \.
 .SH OPTIONS
-options are directly fed to gtk, gconf and gstreamer initialisations.
+Help options
+.TP
+-?, \fB\-\-help\fR
+Show help options
+.PP
+Application options
+.TP
+\fB\-h\fR, \fB\-\-hide\fR
+Hide main window on start up, minbar will stay in notification area.
 .SH AUTHORS
-- Djihed Afifi (djihed@gmail.com) - http://djihed.com
+- Djihed Afifi (djihed@gmail.com) - http://djihed.com/minbar
